<resources>
    <string name="app_name">КПЭ ОСК</string>
    <string name="update">Обновить</string>
    <string name="notification_channel_kpi_change">KPIChange</string>
    <string name="notification_channel_worker">Worker</string>
    <string name="kpi_changed">КПЭ обновились</string>
    <string name="worker">Воркер запустился</string>
    <string name="login_prompt">Табельный номер</string>
    <string name="password_prompt">ФИО полностью</string>
    <string name="login_button">вход</string>
    <string name="logout">Выход</string>
    <string name="chart_bottom_page">График</string>
    <string name="main_bottom_page">КПЭ</string>
    <string name="settings_bottom_page">Настройки</string>
    <string name="min_timer">15</string>
    <string name="periodic_timer">60</string>
    <string name="kpi_didnt_change">КПЭ не изменились</string>
    <string name="kpi_not_found">КПЭ не найдены</string>
    <!-- Preference -->
    <string name="kpi_header">КПЭ</string>
    <string name="log_header">Лог файл</string>
    <string name="timer_title">Период опроса, мин</string>
    <string name="refresh_title">Метод обновления КПЭ</string>
    <string name="enable_logging_title">Сохранять логи</string>
    <string name="setting_menu_help">Помощь</string>
    <!-- Диалог помощи -->
    <string name="help_message">КПЭ\n\n
        3 метода обновления:\n\n
        Интеллектуальный (рекомендовано) –
        КПЭ будет обновлятся после закрытия запроса (через 15–30 минут), для этого нужно разрешение
        на чтение данных с карты (закрытие запроса определяется по логу Мобильного сотрудника).
        Рекомендовано для снижения трафика и расхода батареи\n\n
        Обычный  (по умолчанию) – КПЭ запрашивается по таймеру, установленному полем «Период опроса»\n\n
        В ручную – КПЭ обновляется в ручную, нет фоновой работы\n\n
        Период опроса, мин – интервал опроса КПЭ, по внутренней реализации фоновых работ в ОС
        Android минимальный интервал 15 минут\n\n
        Лог файл – требуется разрешение на запись на карту памяти, лог-файлы (максимум 5) будут
        в каталоге KPIWatcher</string>
    <string name="ok_button">Ок</string>
    <string name="incorrect_login_data">Данные для входа не корректны</string>
    <string name="detail_fragment_settings">настройки</string>
    <string name="detail_fragment_settings_title">Настройки графика</string>
    <!--хинты в login fragment-->
    <string name="login_hint">Табельный номер полностью, включая начальные нули</string>
    <string name="password_hint">ФИО полностью, без учета регистра, пробелов</string>
    <string name="login_editText_hint">0123456789</string>
    <string name="password_editText_hint">Иванов Иван Иванович</string>
</resources>