<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.vrnandr.kpiwatcher.ui.main.MainFragment"
        android:label="@string/main_bottom_page" >
        <action
            android:id="@+id/action_mainFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.vrnandr.kpiwatcher.ui.main.SettingsFragment"
        android:label="@string/settings_bottom_page" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.vrnandr.kpiwatcher.ui.main.DetailFragment"
        android:label="@string/chart_bottom_page" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.vrnandr.kpiwatcher.ui.main.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
</navigation>